src/main/webapp/static/css/style.css
/**
 * Copyright 2009 Robin Komiwes, Bruno Verachten, Christophe Cordenier
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * 	http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/*
Theme inspired from kuler scheme : http://kuler.adobe.com/#themeID/617195
	2F2F32	6E6D65 	C9BB9B	FFD8A1	FF7351
*/
@import url("reset.css");

/*****
 * GLOBAL 
 */

/* common tags */
body { background: #FFD8A1 url('../img/top_bg.png') repeat-x scroll; font-family: Helvetica, Arial, sans-serif; font-size: 14px; text-align: center}

.wrapper { clear: both; margin: 0 auto; width: 760px; padding: 0px; text-align:left;}

/* lists */
ol, ul { list-style-position:outside; padding: 10px 5px; margin:0px 20px; }
ol { list-style-type:decimal; }
ul { list-style-type:disc; }

/* links */
a { color: #FF7351;}

/* forms */
input { border: 1px solid #6E6D65; font-family: Helvetica, Arial, sans-serif; font-size:14px; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; padding:5px; border-bottom: 1px solid rgba(0,0,0,0.25); color: #6E6D65;}
input:focus { border: 1px solid #FF7351;box-shadow: 0px 0px 5px #FF7351; -webkit-box-shadow: 0px 0px 5px #FF7351; -moz-box-shadow: 0px 0px 5px #FF7351;  }
input[type="checkbox"] { width:auto !important; }

/* heading */
h1, h2, h3, h4, h5, h6 { padding: 5px 0px; }

h1, h2 { font-family: Georgia, serif; }
h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { text-decoration: none; color: #2F2F32}

h1 { font-size: 25px; text-align:center; padding:20px; clear:both;}
h2 { font-size: 23px; }
h3 { font-size: 20px; }

/* others */
p, blockquote, pre { margin: 5px 0px; padding:5px 0px; }
quote, blockquote {	font-family: Georgia; font-style: italic;  }
blockquote, pre { margin-left:30px; padding-left:10px; border-left:1px solid #C9BB9B; }
pre { font-size:12px; white-space:normal; }

small { font-size: 12px; font-style:italic;}
abbr { padding-right: 3px; padding-left: 3px; }

/*****
 * UTILITY CLASSES
 */
.radied, .box, .section { border-radius: 10px; -moz-border-radius: 10px; -webkit-border-radius: 10px; }
.shadowed, .box, .section { box-shadow: 0px 0px 10px rgba(47,47,50,0.6); -webkit-box-shadow: 0px 0px 10px rgba(47,47,50,0.6); -moz-box-shadow: 0px 0px 10px rgba(47,47,50,0.6);}

.btn-active { border: 1px solid #FF7351; background:#FF7351; color:#FFD8A1; text-shadow:0px -1px 1px rgba(0,0,0,0.25);  border-top: 1px solid rgba(255,255,255, 0.25); border-bottom: 1px solid rgba(0,0,0,0.25); }

/* section and positioning */
.section { background: white; padding:10px; margin-bottom:10px;}
.section h2 { font-family: Helvetica, Arial, sans-serif; padding:0px; padding-bottom:5px;}

.left-col { float:left; margin-right:5px; clear: left; }
.right-col { float:right; margin-left:5px; clear: right; }

.clearer {clear:both;}

.x160 { width: 135px; }
.x260 { width: 235px; }
.x300 { width: 275px; }
.x360 { width: 335px; }
.x380 { width: 355px; }
.x400 { width: 375px; }
.x460 { width: 435px; }
.x500 { width: 475px; }

/* nav */
.nav { list-style: none; padding:10px;}
.nav li { display:inline; padding:0px 10px; }
.nav a { text-decoration: none; }
.nav li.last { border-right: 1px solid #6E6D65; }

/*****
 * HEADER
 */
#header { height:110px; margin-bottom:10px;}
#wooki { width: 300px; float:left; padding:20px 0px;}

#signin-box { padding-top:10px; background: url('../img/bubble-signin-top.png') no-repeat 130px 0px; position:absolute; width:200px; display:none;}
#signin { color:white; padding: 10px; background:#2F2F32; }
#signin h2 { font-family: Helvetica, Arial, sans-serif; font-size: 18px;}
#signin label { font-size:12px; }
#signin td { text-align:left; padding:5px 0px; }
#signin div { text-align:right }
#signin .signin-field { display:block; width:170px;}
#signin #rememberMe {margin-left:10px;}

#nav a { text-shadow:0px 1px 1px rgba(255,255,255,0.25); }
#nav #logout { color: #6E6D65;}

#search { clear:right; float: right; padding: 20px 10px 10px 0px; width:450px; text-align:right;}
#search p { color:#6E6D65;}
#query { width:200px; }
#submitSearch { text-decoration: none; }

/*****
 * FOOTER
 */
#footer { clear:both; font-size: 12px; color:#6E6D65; text-align:center; padding:5px;}
#footer a { color:#6E6D65; }

/*****
 * INDEX
 */
#teasing-box, #welcome-box { float:left; padding-bottom:20px; background: url('../img/bubble-teasing.png') no-repeat 220px bottom;}
#teasing { background:#2F2F32; color:white; padding:10px; font-family: Georgia, serif; font-size: 18px;}
#teasing a, #comments-popup div.go-signup a { display:block; width: auto; text-align: center; font-family: Helvetica, Arial, sans-serif; text-decoration:none; }
#teasing em { font-size: 14px;}

#author-feed li { padding-bottom: 10px; }
#collaborator-feed { padding-bottom: 10px; }

/******
 * JQUERY NOTIFY BAR 
 */
/* common */
.jquery-notify-bar ul { list-style: none; text-align: left; padding-bottom: 5px; padding-top: 5px; padding-left: 20px; }
.jquery-notify-bar li { padding: 5px; font-size: 20px; color: white; z-index: 1000000;}

/* errors */
.jquery-notify-bar.wooki-error { padding: 0px; color:#f00; background-color: transparent; border: none; background: transparent url('../img/bubble-error-down.png') no-repeat bottom; padding-bottom: 10px;}
.error-list { background-color: #2F2F32;}

/* flash msg */
.jquery-notify-bar.wooki-flash { padding: 0px; color:#2F2F32; background-color: transparent; border: none; padding-bottom: 10px;}
.flash-list { background-color: white; }
.flash-list li { color:#2F2F32 }

/******
 * DIALOG
 */
.ui-widget-overlay { background:#666; top:0px; opacity: 0.5; position:absolute; }
/* ... */

